--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,18 +19,12 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".NfcReactActivity"
-            android:label="@string/title_activity_nfc_tag_viewer" >
+            android:label="@string/title_activity_nfc_tag_viewer"
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:scheme="http" />
             </intent-filter>
         </activity>
     </application>
