NFC タグに書き込む機能を追加

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NfcWriterActivity"
+            android:label="@string/title_activity_nfc_writer"
+            android:launchMode="singleInstance" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
